k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot
spec:
  type: NodePort
  ports:
    - port: 8080
      protocol: TCP
      nodePort: 31122
  selector:
    app: spring-boot
    tier: app
