k8s/spring-k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pettion-server
spec:
  selector:
    matchLabels:
      app: pettion-server
      component: pettion-server
      tier: back
  replicas: 1
  template:
    metadata:
      labels:
        app: pettion-server
        component: pettion-server
        tier: back
    spec:
      containers:
        - name: pettion-server
          image: phjppo0918/pettion-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: pettion-server
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: pettion-server
    component: pettion-server
    tier: back
